<resources>
    <string name="app_name">ResturantManagment</string>
    <string name="chose_a_meal">Chose a Meal to add</string>
    <string name="chooseARole">Chose a role</string>
    <string name="add">Add to the Basket</string>
    <string name="changeStatus">Change Status</string>
    <string name="go">Enter</string>
    <string name="email">SEND EMAIL</string>
    <string name="get_items">GET ITEMS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inside">inside</string>
</resources>