<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeStatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:text="@string/chose_a_meal" />

        <Spinner
            android:id="@+id/ordersSpinner"
            android:layout_width="411dp"
            android:layout_height="87dp"
            android:layout_marginBottom="20dp"
            android:prompt="@string/app_name" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/chose_a_meal" />

        <Spinner
            android:id="@+id/empSpinner"
            android:layout_width="411dp"
            android:layout_height="87dp"
            android:layout_marginBottom="20dp"
            android:prompt="@string/app_name" />


        <Button
            android:id="@+id/changeStatus"
            style="@style/TextStyle"
            android:onClick="changeStatus"
            android:text="@string/changeStatus" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>